--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Find an Author</h2>
 
 
-<%= form_tag :method => :post do %>
+<%= form_tag search_authors_path, :method => :get do %>
   <%= label_tag :author_name %>
   <%= text_field_tag :name %><br />
   <%= label_tag :book_title %>
