--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
    <%= render 'form' %>
 
+   <%= link_to "Back", user_path(@user) %>
    <%= link_to "Destroy", user_path(@user), :method => :delete %>
