--- a/app/assets/stylesheets/randr_style.css.erb
+++ b/app/assets/stylesheets/randr_style.css.erb
@@ -2,7 +2,7 @@
  header {
    width: 100%;
    height: 200px;
-   background: url(<%= asset_path 'train_tracks.png' %>) repeat-x;
+   /*background: url(<%= asset_path 'train_tracks.png' %>) repeat-x;*/
 }
 nav {
    width: 100%;
@@ -36,4 +36,11 @@ nav ul li a:hover {
 }
 nav ul li a:active {
 
+}
+
+/* Body Styles */
+div#wrapper {
+   margin: 0 auto;
+   width: 90%;
+   padding: 20px;
 }
