--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,15 @@
       <nav>
          <ul>
             <li><%= link_to "Home", new_user_path %></li>
-            <li><%= link_to "Search",  new_author_path %></li>
-            <li><%= link_to "Favorites", user_path(@user) %></li>
+            <li><%= link_to "Find an Author",  new_author_path %></li>
+            <li><%= link_to "Find a Book",  new_book_path %></li>
+            <li><%= link_to "Login", new_session_path %></li>
          </ul>
       </nav>
    </header>
-
-<%= yield %>
+<div id="wrapper">
+  <%= yield %>
+</div>
 
 </body>
 </html>
