--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-      <h1><a href="">RandR</a></h1>
+      <h1><%= link_to "RandR", new_user_path %></a></h1>
       <nav>
          <ul>
             <li><%= link_to "Home", new_user_path %></li>
