--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,10 +1,11 @@
-<h2>Find a Book</h2>
-
-<%= form_tag search_books_path, :method => :get do %>
-  <%= label_tag :book_title %>
-  <%= text_field_tag :title %><br />
-  <%= label_tag :author_name %>
-  <%= text_field_tag :name %><br />
+<%= form_tag search_books_path, :method => :get, :class => "form_block" do %>
+   <h2>Find a Book</h2>
+   <p class="login">For best results, use the book title and author name.</p><br />
+   <%= label_tag :book_title %>
+   <%= text_field_tag :title %><br />
+   <%= label_tag :author_name %>
+   <%= text_field_tag :name %><br />
  
-  <%= submit_tag "Search" %>
+   <%= submit_tag "Search" %>
+   <p class="login"></p>
 <% end %>
