--- a/app/assets/stylesheets/randr_style.css.erb
+++ b/app/assets/stylesheets/randr_style.css.erb
@@ -40,6 +40,7 @@ nav {
    left: 0;
    right: 0;
    font-family: 'Raleway Dots', Helvetica, Arial, sans-serif;
+   border-bottom: solid 20px #74748c;
 }
 nav ul {
    margin: 35px 20px;
