Author Array fixed and stylesheet updated

--- a/app/assets/stylesheets/randr_style.css.erb
+++ b/app/assets/stylesheets/randr_style.css.erb
@@ -182,10 +182,23 @@ div.upcoming {
    float: left;
    width: 30%;
 }
-form input.user_button{
+form input.user_button {
    margin: 10px;
    top: -35px;
    left: 170px;
+   float: none;
+   padding: 5px 10px;
+   color: #303033;
+   background-color: #74748c;
+   font-size: 12px;
+   -moz-border-radius: 5px;
+   -webkit-border-radius: 5px;
+   border-radius: 5px;
+}
+form input[value=Add]{
+   margin: 10px;
+   top: 0;
+   left: -10px;
    float: none;
    padding: 5px 10px;
    color: #303033;
