--- a/app/views/authors/search.html.erb
+++ b/app/views/authors/search.html.erb
@@ -5,14 +5,20 @@
    <%= link_to "Search again", new_author_path %>
 <% elsif @no_results.nil? && @new_author.nil? && @new_title.nil? %>
    <p>Did you mean?</p>
-   <p>Notice: If the author you are searching for has different ways of writing their name, please add all instances of the author's name for the most acurate results.</p>
    <ul>
       <% @choose_author.each do |author| %>
-      <li><%= author %><%= button_to 'Add', action: 'create', name: author %></li>
+      <% if author.is_a? Enumerable  %>
+      <li><%= author.join(", ") %>
+      <% else %>
+      <li><%= author %>
+      <% end %> 
+      <%= button_to 'Add', action: 'create', name: author %></li>
       <% end %>
       
-      <%= link_to "None of these are correct", new_author_path %>
+      <p><%= link_to "None of these are correct", new_author_path %></p><br />
 <% else %>
-   <h3><%= @new_author %><%= button_to 'Add', action: 'create', name: @new_author %></h3>
+   <h3><%= @new_author %></h3>
+   <%= button_to 'Add', class: "user_button", action: 'create', name: @new_author %>
 <% end %>
    </ul>
+   <p>Notice: If the author you are searching for has different ways of writing their name, please add all instances of the author's name for the most acurate results.</p>
