Book Author Array fixed

--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -6,7 +6,11 @@
    <p>Did you mean?</p>
    <ul>
       <% @choose_book.each do |book| %>
+         <% if book['ItemAttributes']['Author'].is_a? Enumerable  %>
+         <li><%= book['ItemAttributes']['Title'] %> by <%= book['ItemAttributes']['Author'].join(", ") %></li>
+         <% else %>
          <li><%= book['ItemAttributes']['Title'] %> by <%= book['ItemAttributes']['Author'] %></li>
+         <% end %> 
          <%= button_to 'Add', action: 'create', title: book['ItemAttributes']['Title'], author: book['ItemAttributes']['Author'] %>
       <% end %>
 
