Added style to search pages

--- a/app/views/authors/search.html.erb
+++ b/app/views/authors/search.html.erb
@@ -1,3 +1,4 @@
+<div class="search">
 <h2>Add Author to My Favorites</h2>
 
 <% if !@no_results.nil? %>
@@ -22,3 +23,4 @@
 <% end %>
    </ul>
    <p>Notice: If the author you are searching for has different ways of writing their name, please add all instances of the author's name for the most acurate results.</p>
+</div>
