--- a/app/assets/stylesheets/randr_style.css.erb
+++ b/app/assets/stylesheets/randr_style.css.erb
@@ -170,6 +170,10 @@ div.green_back {
 div.center {
    margin: 0 auto;
 }
+div.search {
+   margin-left: 20%;
+   width: 70%;
+}
 div.favorites {
    margin-left: 20%;
    float: left;
