--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,3 +1,4 @@
+<div class="search">
 <h2>Add a Book to My Library</h2>
 
 <% if !@no_info.nil? %>
@@ -20,4 +21,4 @@
    <%= button_to 'Add', action: 'create', title: @new_book['ItemAttributes']['Title'], author: @new_book['ItemAttributes']['Author'] %>
 <% end %>
    </ul>
-
+</div>
