--- a/app/assets/stylesheets/randr_style.css.erb
+++ b/app/assets/stylesheets/randr_style.css.erb
@@ -1,3 +1,5 @@
+@import url('http://fonts.googleapis.com/css?family=Alex+Brush|Raleway+Dots' rel='stylesheet' type='text/css');
+
 /***
 * RandR Color Codes
 * #87cdb0 - seafoam
