--- a/app/assets/stylesheets/randr_style.css.erb
+++ b/app/assets/stylesheets/randr_style.css.erb
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Alex+Brush|Raleway+Dots' rel='stylesheet' type='text/css');
+@import url('//fonts.googleapis.com/css?family=Alex+Brush|Raleway+Dots');
 
 /***
 * RandR Color Codes
