--- a/app/assets/stylesheets/randr_style.css.erb
+++ b/app/assets/stylesheets/randr_style.css.erb
@@ -84,7 +84,7 @@ div#wrapper {
    width: 95%;
    padding: 20px;
 }
-/*div.welcome h1 {
+div.welcome h1 {
    position: relative;
    top: -60px;
    left: 50px;
@@ -92,10 +92,7 @@ div#wrapper {
    width: 50%;
    font-family: 'Alex Brush', Helvetica, Arial, sans-serif;
    font-size: 40px; 
-   -moz-transform:rotate(-20deg);
-   -webkit-transform:rotate(-20deg);
-   transform:rotate(-20deg);
-}*/
+}
 /* Links */
 a:link {
    text-decoration: none;
